[project]
name = "openrl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "accelerate>=1.3.0",
    "datasets>=3.2.0",
    "flash-attn>=2.7.4.post1",
    "jupyter>=1.1.1",
    "polars>=1.21.0",
    "trl>=0.14.0",
    "vllm>=0.7.1",
    "wandb>=0.19.6",
]
